force-app/main/default/objects/Opportunity/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <description>NB: 2/4/2016 Country field being read in from the Account record (System Country field) initially for use in Brainshark Sales Accelerator mapping.</description>
    <formula>Account.Country__c</formula>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>