force-app/main/default/objects/Opportunity/fields/Account_SysDivBillT_o__c.field-meta.xml
<CustomField>
    <fullName>Account_SysDivBillT_o__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account SysDivBillT﻿o</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Account SysDivBillT﻿o)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>