force-app/main/default/objects/Opportunity/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>IF (Contains(Account.RecordTypeId,&quot;012700000009Ovo&quot;), &quot;Customer&quot;,
IF(Contains(Account.RecordTypeId,&quot;012700000009OvZ&quot;),&quot;Prospect&quot;,
IF(Contains(Account.RecordTypeId,&quot;012700000009TNj&quot;),&quot;Vendor&quot;,
&quot;Other&quot;
)))</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>