force-app/main/default/objects/Opportunity/fields/Account_Type_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_Picklist__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
                <isActive>false</isActive>
                <label>Vendor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>