force-app/main/default/objects/Opportunity/fields/Account_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Account_Vertical__c</fullName>
    <formula>TEXT(Account.Account_Vertical__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Vertical</label>
    <type>Text</type>
</CustomField>