force-app/main/default/objects/Opportunity/fields/Account_Vertical_Update__c.field-meta.xml
<CustomField>
    <fullName>Account_Vertical_Update__c</fullName>
    <label>Account Vertical Update</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Building Service Contractors</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Food Processing</fullName>
            </value>
            <value>
                <fullName>Food Service</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Graphic Design/Advertising</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Health Clubs</fullName>
            </value>
            <value>
                <fullName>Hospitality/Lodging</fullName>
            </value>
            <value>
                <fullName>Large Venue</fullName>
            </value>
            <value>
                <fullName>Manufacturing (non food/print)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Printer - Commercial/Sheet Fed</fullName>
            </value>
            <value>
                <fullName>Printer - Digital/Wide Format</fullName>
            </value>
            <value>
                <fullName>Printer - Gang Run</fullName>
            </value>
            <value>
                <fullName>Printer - In-plant</fullName>
            </value>
            <value>
                <fullName>Printer - Other</fullName>
            </value>
            <value>
                <fullName>Printer - Packaging</fullName>
            </value>
            <value>
                <fullName>Printer - Sheetfed/Web Combo</fullName>
            </value>
            <value>
                <fullName>Printer - Web</fullName>
            </value>
            <value>
                <fullName>Property Management</fullName>
            </value>
            <value>
                <fullName>Re-D - Candy/Tobacco</fullName>
            </value>
            <value>
                <fullName>Re-D – Convenience Store</fullName>
            </value>
            <value>
                <fullName>Re-D - Foodservice</fullName>
            </value>
            <value>
                <fullName>Re-D - Foodservice/Jan-San Mix</fullName>
            </value>
            <value>
                <fullName>Re-D - Healthcare</fullName>
            </value>
            <value>
                <fullName>Re-D - Janitorial</fullName>
            </value>
            <value>
                <fullName>Re-D - Manufacturing</fullName>
            </value>
            <value>
                <fullName>Re-D - Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>