force-app/main/default/objects/Opportunity/fields/Acct_Reassignments_Exist__c.field-meta.xml
<CustomField>
    <fullName>Acct_Reassignments_Exist__c</fullName>
    <description>Do Account Reassignments Exist for the Account on this Opportunity.</description>
    <formula>If(Number_of_Account_Reassignments__c&gt;0,&apos;Yes&apos;,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Are there Account Reassignments that exist for the Account that is on this Opportunity.</inlineHelpText>
    <label>Acct. Reassignment (Yes/No)</label>
    <type>Text</type>
</CustomField>