force-app/main/default/objects/Opportunity/fields/Active_Sales_Team_Roles__c.field-meta.xml
<CustomField>
    <fullName>Active_Sales_Team_Roles__c</fullName>
    <description>Tracks via Apex which Sales Team Roles are added to the Opportunity</description>
    <label>Active Sales Team Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Packaging Equipment Specialist</fullName>
            </value>
            <value>
                <fullName>Specialist Corrugated</fullName>
            </value>
            <value>
                <fullName>Specialist Food</fullName>
            </value>
            <value>
                <fullName>Specialist Cold Chain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>