force-app/main/default/objects/Opportunity/fields/aDangerous_Hazardous__c.field-meta.xml
<CustomField>
    <fullName>aDangerous_Hazardous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dangerous/Hazardous</label>
    <type>Checkbox</type>
</CustomField>