force-app/main/default/objects/Opportunity/fields/Amount_Won__c.field-meta.xml
<CustomField>
    <fullName>Amount_Won__c</fullName>
    <formula>IF (ISPICKVAL( StageName , &quot;8- Closed Won&quot;),Amount,
    IF (ISPICKVAL( StageName , &quot;6- Closed Won&quot;), 
Amount,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>