force-app/main/default/objects/Opportunity/fields/Annual_Rev_minus_Vendor_Total__c.field-meta.xml
<CustomField>
    <fullName>Annual_Rev_minus_Vendor_Total__c</fullName>
    <formula>Amount -  Vendor_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual Opportunity Revenue minus the sum of Vendor Sub-Totals.  If this number is positive, the opportunity has a higher value.  If it&apos;s negative, the Vendor Sub-Totals have a higher value.  If it&apos;s zero, the numbers match.</inlineHelpText>
    <label>Annual Rev minus Vendor Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>