force-app/main/default/objects/Opportunity/fields/Annual_Usage__c.field-meta.xml
<CustomField>
    <fullName>Annual_Usage__c</fullName>
    <formula>(Monthly_Usage__c)  * (12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>