force-app/main/default/objects/Opportunity/fields/Assigned_Kitting_Program_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Kitting_Program_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Kitting</description>
    <label>Assigned Kitting Program Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>