force-app/main/default/objects/Opportunity/fields/Attachments_Added__c.field-meta.xml
<CustomField>
    <fullName>Attachments_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if there are attachments on this opportunity that you&apos;d like the Design Center to review.</inlineHelpText>
    <label>Attachments Added?</label>
    <type>Checkbox</type>
</CustomField>