force-app/main/default/objects/Opportunity/fields/Attachments_converted__c.field-meta.xml
<CustomField>
    <fullName>Attachments_converted__c</fullName>
    <formula>IF(
Attachments_Added__c = TRUE, &quot;** ATTACHMENTS **&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachments converted</label>
    <type>Text</type>
</CustomField>