force-app/main/default/objects/Opportunity/fields/AtTask_Project__c.field-meta.xml
<CustomField>
    <fullName>AtTask_Project__c</fullName>
    <description>1/26/17 - AL - Changed label name to &quot;workfront&quot;</description>
    <inlineHelpText>This number is auto populated by the integration with AtTask.</inlineHelpText>
    <label>WorkFront Project #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>