force-app/main/default/objects/Opportunity/fields/Awarded_Incumbent_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Incumbent_Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the name of the competitor that was awarded or who is the incumbent.  If unknown, you may choose &quot;Unknown.&quot;</inlineHelpText>
    <label>Awarded/Incumbent Competitor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Opportunities Awarded</relationshipLabel>
    <relationshipName>OpportunitiesAwarded</relationshipName>
    <type>Lookup</type>
</CustomField>