force-app/main/default/objects/Opportunity/fields/Awarded_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>THIS FIELD ONLY GETS UPDATED ON CLOSED LOST OPPORTUNITIES - the reps update vendors on the Vendor Detail related list.  TSB uses the Awarded Vendor related list.</description>
    <inlineHelpText>Select the name of the vendor that was awarded or who is the incumbent. If unknown, you may choose &quot;Unknown.&quot;</inlineHelpText>
    <label>Awarded Vendor</label>
    <referenceTo>Vendor_Detail__c</referenceTo>
    <relationshipLabel>Opportunities Awarded</relationshipLabel>
    <relationshipName>OpportunitiesAwarded</relationshipName>
    <type>Lookup</type>
</CustomField>