force-app/main/default/objects/Opportunity/fields/BDR_Date__c.field-meta.xml
<CustomField>
    <fullName>BDR_Date__c</fullName>
    <inlineHelpText>This field is only visible to, and editable by, the US Sales Effectiveness team.</inlineHelpText>
    <label>zzBDR Date</label>
    <type>Date</type>
</CustomField>