force-app/main/default/objects/Opportunity/fields/Bid_Documents__c.field-meta.xml
<CustomField>
    <fullName>Bid_Documents__c</fullName>
    <label>Bid Document Requirements</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>