force-app/main/default/objects/Opportunity/fields/Bid_Term__c.field-meta.xml
<CustomField>
    <fullName>Bid_Term__c</fullName>
    <label>zzBid Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>