force-app/main/default/objects/Opportunity/fields/Bid_Term_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Term_Begin_Date__c</fullName>
    <description>Jan 2017 - Added for TSB, make it mandatory on their page layout</description>
    <label>Bid Term Begin Date</label>
    <type>Date</type>
</CustomField>