force-app/main/default/objects/Opportunity/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <inlineHelpText>When the opportunity is marked Won, enter the Bill To number here so the Prospect account can be merged with the new Customer account.</inlineHelpText>
    <label>Bill To Number To Merge With</label>
    <length>6</length>
    <type>Text</type>
</CustomField>