force-app/main/default/objects/Opportunity/fields/Bill_to_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Number__c</fullName>
    <label>Bill to Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>