force-app/main/default/objects/Opportunity/fields/Board_Grade__c.field-meta.xml
<CustomField>
    <fullName>Board_Grade__c</fullName>
    <label>Board Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>32 B Kraft</fullName>
            </value>
            <value>
                <fullName>32 B MW</fullName>
            </value>
            <value>
                <fullName>32 C Kraft</fullName>
            </value>
            <value>
                <fullName>32 C MW</fullName>
            </value>
            <value>
                <fullName>44 C Kraft</fullName>
            </value>
            <value>
                <fullName>48 BC Kraft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>