force-app/main/default/objects/Opportunity/fields/BOM__c.field-meta.xml
<CustomField>
    <fullName>BOM__c</fullName>
    <description>Kitting</description>
    <label>BOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Submitted to Finance</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>