force-app/main/default/objects/Opportunity/fields/Box_com_URL__c.field-meta.xml
<CustomField>
    <fullName>Box_com_URL__c</fullName>
    <description>Workfront passes this field to the Engineered Project object, will use a workflow to copy it to Opportunity, so we can pick it up on a PIM work order that is related to the opportunity</description>
    <label>Box.com URL</label>
    <type>Url</type>
</CustomField>