force-app/main/default/objects/Opportunity/fields/Box_Style__c.field-meta.xml
<CustomField>
    <fullName>Box_Style__c</fullName>
    <label>Box Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HSC</fullName>
            </value>
            <value>
                <fullName>RSC</fullName>
            </value>
            <value>
                <fullName>FOL</fullName>
            </value>
            <value>
                <fullName>PAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>