force-app/main/default/objects/Opportunity/fields/C360_Customer_360__c.field-meta.xml
<CustomField>
    <fullName>C360_Customer_360__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Customer 360</description>
    <inlineHelpText>Lookup to Customer 360</inlineHelpText>
    <label>zzCustomer 360</label>
    <referenceTo>C360_Customer_360__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>