force-app/main/default/objects/Opportunity/fields/C360_Customer_360_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>C360_Customer_360_ID_Formula__c</fullName>
    <description>Lookup to the Account&apos;s Customer 360.</description>
    <formula>Account.C360_Customer_360__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzC360 Customer 360 ID Formula</label>
    <type>Text</type>
</CustomField>