force-app/main/default/objects/Opportunity/fields/Closed_Stage_Changed__c.field-meta.xml
<CustomField>
    <fullName>Closed_Stage_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Shows if the opp has moved from a closed stage to any other stage at any point.</inlineHelpText>
    <label>Closed Stage Changed</label>
    <type>Checkbox</type>
</CustomField>