force-app/main/default/objects/Opportunity/fields/Cold_Chain_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Cold_Chain_Revenue__c</fullName>
    <inlineHelpText>Opportunity sub-total from Vendors Related list for Cold Chain Packaging and Facility products.</inlineHelpText>
    <label>Cold Chain Revenue</label>
    <summarizedField>Vendor_Detail_Link__c.Vendor_Category_SubTotal__c</summarizedField>
    <summaryFilterItems>
        <field>Vendor_Detail_Link__c.Product_Category__c</field>
        <operation>equals</operation>
        <value>COLD CHAIN, COLD CHAIN/TEMPERATURE CONTROLLED PACKAGING</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Detail_Link__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>