force-app/main/default/objects/Opportunity/fields/Convert_to_Kitting__c.field-meta.xml
<CustomField>
    <fullName>Convert_to_Kitting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that is set to True when the Convert to Kitting button is selected</description>
    <label>Convert to Kitting</label>
    <type>Checkbox</type>
</CustomField>