force-app/main/default/objects/Opportunity/fields/Convert_to_PDN__c.field-meta.xml
<CustomField>
    <fullName>Convert_to_PDN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert to PDN</label>
    <type>Checkbox</type>
</CustomField>