force-app/main/default/objects/Opportunity/fields/CoPacker__c.field-meta.xml
<CustomField>
    <fullName>CoPacker__c</fullName>
    <label>CoPacker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identified</fullName>
            </value>
            <value>
                <fullName>Samples Sent</fullName>
            </value>
            <value>
                <fullName>RFQ Submitted</fullName>
            </value>
            <value>
                <fullName>Quote Accepted</fullName>
            </value>
            <value>
                <fullName>Quote Rejected</fullName>
            </value>
            <value>
                <fullName>SOW Received</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>