force-app/main/default/objects/Opportunity/fields/CoPacker_Name__c.field-meta.xml
<CustomField>
    <fullName>CoPacker_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the CoPacker from the Common Vendor lookup file</inlineHelpText>
    <label>CoPacker Name</label>
    <referenceTo>Vendor_Detail__c</referenceTo>
    <relationshipLabel>CoPacker Name</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>