force-app/main/default/objects/Opportunity/fields/Copy_of_Primary_Promotion_Source__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_Primary_Promotion_Source__c</fullName>
    <description>Needed for Brainshark Sales Accelerator to match Campaign name in the Opportunity to the Campaign field in Brainshark.</description>
    <formula>Campaign.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Copy of Primary Promotion Source</label>
    <type>Text</type>
</CustomField>