force-app/main/default/objects/Opportunity/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <description>Field is visible to system admins only at the time of creation. Purpose of this field is for including in summary-type reports to get a SUM total count of the number of records and/or groups. Created by Kevin Luptowski at Bluewolf 7/20/17.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For reporting purposes.</inlineHelpText>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>