force-app/main/default/objects/Opportunity/fields/Count_of_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Open_Opportunities__c</fullName>
    <description>Count of Open Opportunities</description>
    <formula>IF(IsClosed=FALSE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count of Open Opportunities</inlineHelpText>
    <label>Count of Open Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>