force-app/main/default/objects/Opportunity/fields/Count_of_Past_Due_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Past_Due_Opportunities__c</fullName>
    <formula>IF(AND(IsClosed=FALSE,CloseDate &lt; TODAY()),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Past Due Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>