force-app/main/default/objects/Opportunity/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Takes the value of the &apos;country&apos; field on the acocunt record</description>
    <formula>IF(ISPICKVAL(CurrencyIsoCode, &quot;USD&quot;),
&quot;USA&quot;,&quot;CAN&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account.Country__c</inlineHelpText>
    <label>Country</label>
    <type>Text</type>
</CustomField>