force-app/main/default/objects/Opportunity/fields/CPASS__c.field-meta.xml
<CustomField>
    <fullName>CPASS__c</fullName>
    <description>Kitting</description>
    <label>CPASS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>