force-app/main/default/objects/Opportunity/fields/CPASS_Complete__c.field-meta.xml
<CustomField>
    <fullName>CPASS_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPASS Complete?</label>
    <type>Checkbox</type>
</CustomField>