force-app/main/default/objects/Opportunity/fields/Cust_Will_CDI__c.field-meta.xml
<CustomField>
    <fullName>Cust_Will_CDI__c</fullName>
    <inlineHelpText>Will the Customer sign CDI for excess raw materials/finished goods?</inlineHelpText>
    <label>Cust Will CDI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>