force-app/main/default/objects/Opportunity/fields/Customer_Annual_Spend_with_Veritiv__c.field-meta.xml
<CustomField>
    <fullName>Customer_Annual_Spend_with_Veritiv__c</fullName>
    <label>Customer Annual Spend with Veritiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>