force-app/main/default/objects/Opportunity/fields/Customer_Current_CoPacker_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Current_CoPacker_Name__c</fullName>
    <description>Kitting</description>
    <label>Customer Current CoPacker Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>