force-app/main/default/objects/Opportunity/fields/Customer_Platform__c.field-meta.xml
<CustomField>
    <fullName>Customer_Platform__c</fullName>
    <label>Customer Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aftermarket Automotive</fullName>
            </value>
            <value>
                <fullName>Aftermarket Powersports</fullName>
            </value>
            <value>
                <fullName>All In One Printer</fullName>
            </value>
            <value>
                <fullName>Audio Accessory</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Camera</fullName>
            </value>
            <value>
                <fullName>Camera Accessory</fullName>
            </value>
            <value>
                <fullName>Cell Phone</fullName>
            </value>
            <value>
                <fullName>Computer Component</fullName>
            </value>
            <value>
                <fullName>Computer Peripheral</fullName>
            </value>
            <value>
                <fullName>Consumer Electronic Accessory</fullName>
            </value>
            <value>
                <fullName>Cookware</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Diagnostic Testing</fullName>
            </value>
            <value>
                <fullName>Durable Food and Beverage Container</fullName>
            </value>
            <value>
                <fullName>Fashion Accessory</fullName>
            </value>
            <value>
                <fullName>Fitness Accessory</fullName>
            </value>
            <value>
                <fullName>Fitness Equipment</fullName>
            </value>
            <value>
                <fullName>Flat Panel Monitor</fullName>
            </value>
            <value>
                <fullName>Floral</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage - Perishable</fullName>
            </value>
            <value>
                <fullName>Garage Equipment</fullName>
            </value>
            <value>
                <fullName>Home Security</fullName>
            </value>
            <value>
                <fullName>Hospitality Supply</fullName>
            </value>
            <value>
                <fullName>Industrial Automation</fullName>
            </value>
            <value>
                <fullName>Kitchen Appliance</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
                <isActive>false</isActive>
                <label>Laptop</label>
            </value>
            <value>
                <fullName>Location Tracker</fullName>
            </value>
            <value>
                <fullName>Medical Equipment &amp; Supplies</fullName>
            </value>
            <value>
                <fullName>Mobile Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>