force-app/main/default/objects/Opportunity/fields/Customer_Platform_Other__c.field-meta.xml
<CustomField>
    <fullName>Customer_Platform_Other__c</fullName>
    <label>Customer Platform (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>