force-app/main/default/objects/Opportunity/fields/Customer_Selling_Margin__c.field-meta.xml
<CustomField>
    <fullName>Customer_Selling_Margin__c</fullName>
    <formula>Amount *  Customer_Selling_Margin_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Selling Margin $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>