force-app/main/default/objects/Opportunity/fields/Customer_Selling_Margin_Rate__c.field-meta.xml
<CustomField>
    <fullName>Customer_Selling_Margin_Rate__c</fullName>
    <inlineHelpText>Choose your target margin percentage for this opportunity</inlineHelpText>
    <label>Customer Selling Margin Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>