force-app/main/default/objects/Opportunity/fields/Customer_Sign_CDI__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sign_CDI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Kitting</description>
    <label>Customer Sign CDI?</label>
    <type>Checkbox</type>
</CustomField>