force-app/main/default/objects/Opportunity/fields/Customer_Supplied_Raw_Materials__c.field-meta.xml
<CustomField>
    <fullName>Customer_Supplied_Raw_Materials__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Kitting</description>
    <label>Customer Supplied Raw Materials?</label>
    <type>Checkbox</type>
</CustomField>