force-app/main/default/objects/Opportunity/fields/Customer_with_another_CoPacker__c.field-meta.xml
<CustomField>
    <fullName>Customer_with_another_CoPacker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer with another CoPacker?</label>
    <type>Checkbox</type>
</CustomField>