force-app/main/default/objects/Opportunity/fields/Danger_Hazard_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Danger_Hazard_Explanation__c</fullName>
    <inlineHelpText>If the kit contains dangerous or hazardous material, please give a detailed explanation here.</inlineHelpText>
    <label>Danger/Hazard Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>